Closed Bug 568490 Opened 15 years ago Closed 15 years ago

Changing the window transparency mode loses the maximized/minimized window state

Categories

(Core :: Widget: Win32, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: robarnold, Assigned: robarnold)

Details

Attachments

(1 file)

Triggered by switching to/from personas while maximized with the glass theme.
Rob this seems to occur if I just try and preview a lwtheme on getpersonas.com from default theme Aero (with D2D/DW disabled). I was going to try and test Personas' Plus to see if the Extension does it too, but sadly Mozilla is having network issues today.
(In reply to comment #1) > Rob this seems to occur if I just try and preview a lwtheme on getpersonas.com > from default theme Aero (with D2D/DW disabled). Poor wording on my part - I count previewing as applying (it's the same codepath from a platform point of view)
Assignee: nobody → tellrob
Status: NEW → ASSIGNED
Attachment #448097 - Flags: review?(jmathies)
Attachment #448097 - Flags: review?(jmathies) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: