Bug 568490 - Preserve the maximized/minimized style on transparency mode change. r=jimm